feat: login, logout, register, me, tests
