# lib/hexatube_web/controllers/user_registration_schemas.ex
@@ -5,4 +5,9 @@ defmodule HexatubeWeb.UserRegistrationSchemas do
     username: {:required, :string},
     password: {:required, :string}
   }
+
+  defschema :login, %{
+    username: {:required, :string},
+    password: {:required, :string}
+  }
 end
